Fix strong site anchor truncation in IE
screenshot:
https://zos.alipayobjects.com/rmsportal/jtXxUhVBfEslRIpDvwhP.png

--- a/site/theme/static/common.less
+++ b/site/theme/static/common.less
@@ -28,7 +28,6 @@ a {
   width: 92%;
   margin: 0 auto;
   border-radius: @border-radius-base;
-  overflow: hidden;
   padding: 24px 0 0;
   margin-bottom: 24px;
   position: relative;
